--- a/src/main/webapp/credit/credit_company_bill_cancel.xhtml
+++ b/src/main/webapp/credit/credit_company_bill_cancel.xhtml
@@ -64,7 +64,7 @@
 
 
                     <h:panelGroup rendered="#{creditCompanyBillSearch.printPreview}" >
-                        <bi:insRecieve billController ="#{creditCompanyBillSearch}"  bill="#{creditCompanyBillSearch.bill.cancelledBill}" dup="false"/>  
+                        <bi:insRecieve billController ="#{creditCompanyBillSearch}"  bill="#{creditCompanyBillSearch.bill}" dup="false"/>  
                     </h:panelGroup>
 
 
