--- a/src/main/webapp/resources/cashier/channelBilledBill.xhtml
+++ b/src/main/webapp/resources/cashier/channelBilledBill.xhtml
@@ -25,7 +25,7 @@
                     <h:outputLabel value="Time"/>
                 </f:facet>
                 <h:outputLabel value="#{b.createdAt}"  >
-                    <f:convertDateTime pattern="hh:mm a"/>
+                    <f:convertDateTime pattern="hh:mm:ss a"/>
                 </h:outputLabel>
             </p:column>                        
             <p:column headerText="Id" >
