Paysheet Print Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/resources/hr/pay_slip_2.xhtml
+++ b/src/main/webapp/resources/hr/pay_slip_2.xhtml
@@ -917,6 +917,22 @@
                                 </td>
                                 <td></td>
                             </tr>
+                            <tr>
+                                <td><p:spacer height="20" /></td>
+                                <td><h:outputLabel value=" "/></td>
+                                <td><h:outputLabel value=" "/></td>
+                            </tr>
+                            <tr>
+                                <td colspan="3" style="width: 150px;"><h:outputLabel value="Late(10 Min) : #{cc.attrs.bill.systemLatedays10min}" /></td>
+                            </tr>
+                            <tr>
+                                <td><p:spacer height="10" /></td>
+                                <td><h:outputLabel value=" "/></td>
+                                <td><h:outputLabel value=" "/></td>
+                            </tr>
+                            <tr>
+                                <td colspan="3"><h:outputLabel value="Late(90 Min) : #{cc.attrs.bill.systemLatedays90min}" /></td>
+                            </tr>
                         </table>
                     </div>
                 </div>
