Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/resources/cashier/credit_letter_bht.xhtml
+++ b/src/main/webapp/resources/cashier/credit_letter_bht.xhtml
@@ -268,7 +268,7 @@
                     </tr>
                     <tr >
                         <td width="20%"><p:outputLabel value="Bank A/C Number  "  rendered="#{cc.attrs.con.withFooter}"/></td>
-                        <td align="left"> <h:outputLabel value=" - 013-1001-71924550 "  rendered="#{cc.attrs.con.withFooter}" style="white-space:normal;" /></td>
+                        <td align="left"> <h:outputLabel value=" - 013-1-001-7-1924550 "  rendered="#{cc.attrs.con.withFooter}" style="white-space:normal;" /></td>
                         <td><h:outputLabel value=" "  rendered="#{cc.attrs.con.withFooter}"/></td>
                     </tr>
                     <tr>
