--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -27,7 +27,10 @@
                                                          styleClass="linkButton" ajax="false" /> 
                                         <p:commandButton value="(3) Staff Payroll" 
                                                          action="/hr/hr_report_staff_payroll" 
-                                                         styleClass="linkButton" ajax="false" />                                 
+                                                         styleClass="linkButton" ajax="false" />
+                                        <p:commandButton value="(3.1) Staff Payroll(Selected Staff)" 
+                                                         action="/hr/hr_staff_salary_1" 
+                                                         styleClass="linkButton" ajax="false" />
                                         <p:commandButton value="(4) Staff Over Time " 
                                                          action="/hr/hr_report_staff_over_time" 
                                                          styleClass="linkButton" ajax="false" />  
