--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -31,7 +31,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="4.1) All Cashier Summary(Using Recipt No) " action="report_cashier_summery_all_total_only_by_reciptno" actionListener="#{cashierReportController.recreteModal2}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="5) All Cashier Summary Without Professional" action="report_cashier_summery_all_total_only_without_pro.xhtml" actionListener="#{cashierReportController.recreteModal}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="6) Bill List" action="/opd_search_user_bills.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="7) Cashier Service Count Report" action="report_cashier_item _count_by_user.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="7) Cashier Service Count Report" action="report_cashier_item_count_by_user.xhtml"/>
                                     </h:panelGrid>                     
                                 </p:panel>
                                 <p:panel header="4) Handover Reports" style="width: 400px; height: auto" collapsed="true" toggleable="true">
