--- a/src/main/webapp/resources/income_report/opd_new_with_credit.xhtml
+++ b/src/main/webapp/resources/income_report/opd_new_with_credit.xhtml
@@ -29,7 +29,7 @@
                 </h:outputLabel>
                 <h:outputLabel value="#{bookKeepingSummery.creditCompany.name}"><br/>
                 </h:outputLabel>
-                <h:outputLabel value="Credit Company OPD Collection."/>     
+                <h:outputLabel value="Credit Company OPD#{bookKeepingSummery.header}"/>     
             </f:facet>
             <p:column  headerText="Category" >
                 <f:facet name="header">
