Signed-off-by: Sanda Test Server <wgspriyanka@gmail.com>

--- a/src/main/webapp/resources/channel/channelReciptPos_coop.xhtml
+++ b/src/main/webapp/resources/channel/channelReciptPos_coop.xhtml
@@ -325,6 +325,20 @@
                         </tr>
                         <tr>
                             <td>
+                                <h:outputLabel value="Print By" ></h:outputLabel>
+                            </td>
+                            <td>
+                                <p:spacer width="10" ></p:spacer>
+                            </td>
+                            <td>
+                                <h:outputLabel value=":" ></h:outputLabel>
+                            </td>
+                            <td>
+                                <h:outputLabel value="#{sessionController.loggedUser.code}" ></h:outputLabel>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
                                 <p:spacer width="10" ></p:spacer>
                             </td>                            
                         </tr>
